up to schema.offline

--- a/sqitch.conf
+++ b/sqitch.conf
@@ -10,3 +10,9 @@
 	# target = db:pg:
 	# registry = sqitch
 	# client = psql
+[target "evergreen"]
+	uri = db:pg:evergreen
+[engine "pg"]
+	target = evergreen
+[deploy]
+	verify = true
